roles/iptables/templates/rules.v6
########
*filter
########

:INPUT   ACCEPT [0:0]
:FORWARD DROP   [0:0]
:OUTPUT  ACCEPT [0:0]

# Allow all loopback (lo) traffic and reject anything
# to localhost that does not originate from lo.
-A INPUT   -i lo           -j ACCEPT
-A INPUT ! -i lo -s ::/128 -j REJECT
-A OUTPUT  -o lo           -j ACCEPT

# Allow all outgoing clearnet traffic.
-A OUTPUT -o eth0 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT  -i eth0 -m conntrack --ctstate ESTABLISHED     -j ACCEPT

# Allow all outgoing private network traffic.
-A OUTPUT -o eth1 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT  -i eth1 -m conntrack --ctstate ESTABLISHED     -j ACCEPT

# Allow incoming ICMPv6 ping.
-A INPUT  -p icmpv6 --icmpv6-type echo-request -j ACCEPT
-A OUTPUT -p icmpv6 --icmpv6-type echo-reply   -j ACCEPT

# Allow outgoing ICMPv6 ping.
-A OUTPUT -p icmpv6 --icmpv6-type echo-request -j ACCEPT
-A INPUT  -p icmpv6 --icmpv6-type echo-reply   -j ACCEPT

# Deny other ICMPv6.
-A INPUT  -p icmpv6 -j DROP
-A OUTPUT -p icmpv6 -j DROP

# Allow incoming SSH.
-A INPUT  -p tcp -m conntrack --ctstate NEW,ESTABLISHED --dport 22 -j ACCEPT
-A OUTPUT -p tcp -m conntrack --ctstate ESTABLISHED     --sport 22 -j ACCEPT

COMMIT
